docs/i18n/fi/docusaurus-plugin-content-docs/version-1.3/shortcuts.md
---
title: "Pikanäppäimet"
sidebar_position: 2
---

On olemassa muutamia pikakuvakkeita, joita voit käyttää editorissa. Osa niistä on kirjoitettu painikkeiden alle.

## Yleiset

* `Ctrl` + `N`: Uusi tiedosto
* `Ctrl` + `Vaihto` + `N`: Uusi tiedosto mallista
* `Ctrl` + `O`: Avaa tiedosto
* `Ctrl` + `I`: Tuontitiedosto
* `Ctrl` + `E`: Vie tiedosto
* `Ctrl` + `Shift` + `E`: Vie kuva
* `Ctrl` + `Alt` + `E`: Vie tiedosto svg
* `Ctrl` + `Alt` + `S`: Avaa asetukset

## Projekti

* `Ctrl` + `Z`: Kumoa
* `Ctrl` + `Y`: Redo
* `Ctrl` + `Alt` + `N`: Open insert dialog
* `Ctrl` + `Alt` + `Shift` + `S`: Avaa projektin asetukset
* `Ctrl` + `Shift` + `P`: Open waypoints dialog
* `Ctrl` + `P`: Avaa väripaletti valintaikkuna
* `Ctrl` + `B`: Avaa taustaikkuna
* `Ctrl` + `Vaihto` + `A`: Avaa alueet -valintaikkuna
* `Ctrl` + `L`: Avoimet kerrokset -valintaikkuna
* `Ctrl` + `S`: Tallenna
* `Alt` + `S`: Muuta polkua
